--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -2,3 +2,7 @@ extends layout
 
 block content
   H1= title
+  form(method='post' action='/')
+    input(type='text' name='name')
+    textarea(lang='is' type='text' name='comment')
+    button(type='submit') TJÁNING
