Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -5,5 +5,5 @@ block content
 
   each thread in threads
     div
-      -id = '/' + thread.id
+      -id = '/threadid=' + thread.id
       a(href=id) tread.name
