Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   h1= title
 
-  each thread in threads
+  each  in 
     div
       -id = '/threadid=' + thread.ID
       a(href=id) tread.name
