--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -7,7 +7,7 @@ block content
     a(href='/newThread')
       button(type='submit' name='writeThread')
 
-  each  in
+  each thread in threads
     div
       -id = '/threadid=' + thread.ID
       a(href=id) tread.name
