Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -10,4 +10,4 @@ block content
   each thread in threads
     div
       -id = '/threadid=' + thread.ID
-      a(href=id) tread.name
+      a(href=id) thread.name
