--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -10,4 +10,6 @@ block content
   each thread in threads
     div
       -id = '/threadid=' + JSON.stringify(thread.id)
-      a(href=id) thread.name
+      a(href=id)= thread.name
+      p= thread.title
+      p= thread.paragraph
