--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -9,7 +9,8 @@ block content
 
   each thread in threads
     div
-      -id = '/threadid=' + JSON.stringify(thread.id)
+      //- -id = '/threadid=' + JSON.stringify(thread.id)
+      -id = '/threadid=' + thread.id
       a(href=id)= thread.name
       p= thread.title
       p= thread.paragraph
