Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -5,7 +5,7 @@ block content
 
   div.newThread
     a(href='/newThread')
-      button(type='submit' name='writeThread')
+      button(type='submit' name='writeThread') New Thread
 
   each thread in threads
     div
