--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -11,6 +11,6 @@ block content
     div
       //- -id = '/threadid=' + JSON.stringify(thread.id)
       -id = '/threadid=' + thread.id
-      a(href=id)= thread.name
-      p= thread.title
+      p= thread.name
+      a(href=id)= thread.title
       p= thread.paragraph
