--- a/src/views/newthread.pug
+++ b/src/views/newthread.pug
@@ -1,20 +1,21 @@
 extends layout
 
 block content
-  h1 Nýr þráður
+  h1 New Thread
 
   form(method='post' action='/')
     div
-      input(type='text' maxlength='64' name='name')
+      input(type='text' maxlength='64' name='name' placeholder='Username')
     div
-      input(type='text' maxlength='100' name='title')
+      input(type='text' maxlength='100' name='title' placeholder='Title')
     div
       textarea(lang='is' maxlength='10000' type='text' name='paragraph' rows='10' cols='30')
     div
+      p Category:
       select(name='sub')
         option(value='Schemes') Schemes
         option(value='Party') Party
         option(value='Tech') Tech
         option(value='Videogames') Videogames
     div
-      button(type='submit') TJÁNING
+      button(type='submit') Express yourself
