Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -13,4 +13,4 @@ block content
       -id = '/threadid=' + thread.id
       p= thread.name
       a(href=id)= thread.title
-      p= thread.paragraph
+      p= thread.date
