--- a/src/views/newthread.pug
+++ b/src/views/newthread.pug
@@ -5,11 +5,31 @@ block content
 
   form(method='post' action='/')
     div
-      input(type='text' maxlength='64' name='name' placeholder='Username')
+      input(
+        type='text'
+        name='name'
+        placeholder='Anonymus'
+        pattern='.{2,64}'
+        required title='must be 2-64 characters'
+      )
     div
-      input(type='text' maxlength='100' name='title' placeholder='Title')
+      input(
+        type='text'
+        name='title'
+        placeholder='Title'
+        pattern='.{3,50}'
+        required title='must be 3-100 characters'
+      )
     div
-      textarea(lang='is' maxlength='10000' type='text' name='paragraph' rows='10' cols='30')
+      textarea(
+        lang='is'
+        type='text'
+        name='paragraph'
+        rows='10'
+        cols='30'
+        pattern='.{3,10000}'
+        required title='must be 3-10000 characters'
+      )
     div
       p Category:
       select(name='sub')
