Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -25,5 +25,5 @@ block content
         tr
           td= thread.name
           td
-            a(href=id)= thread.title
+            a(href=id)= x
           td
