Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -27,5 +27,5 @@ block content
         tr
           td= thread.name
           td
-            a(href=id)= x
-          td
+            a(href=id)= thread.title
+          td= x
