--- a/src/views/thread.pug
+++ b/src/views/thread.pug
@@ -8,13 +8,28 @@ block content
   each comment in comments
     div.comment
       p.text= comment.text
+  br
 
   h3 Tjáðu þig um málið hér.
   -id = '/threadid=' + thread.id
   form(method='post' action='id')
     div
-      input(type='text' name='name')
+      input(
+        type='text'
+        name='name'
+        placeholder='Username'
+        pattern='.{2,64}'
+        required title='must be 2-64 characters'
+      )
     div
-      textarea(lang='is' type='text' name='comment' rows='10' cols='30')
+      textarea(
+        lang='is'
+        type='text'
+        name='paragraph'
+        rows='10'
+        cols='30'
+        pattern='.{3,10000}'
+        required title='must be 3-10000 characters'
+      )
     div
       button(type='submit') Comment
