Updated through rs script

--- a/src/views/newthread.pug
+++ b/src/views/newthread.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   h1 New Thread
 
-  form(method='post' action='/')
+  form(method='post' action='/newthread')
     div
       input(
         type='text'
