Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -18,7 +18,7 @@ block content
         th Date
     tbody
       each thread in threads
-        -id = '/threadid=' + thread.id
+        -id = '/threadid=' + thread.id + '=page=0'
         tr
           td= thread.name
           td
