Updated through rs script

--- a/src/views/newthread.pug
+++ b/src/views/newthread.pug
@@ -8,7 +8,7 @@ block content
       input(
         type='text'
         name='name'
-        placeholder='Anonymus'
+        placeholder='Username'
         pattern='.{2,64}'
         required title='must be 2-64 characters'
       )
