--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -4,4 +4,8 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    block header
+      a(href='')
+        img(src='/images/OP.jpg' alt='Beautiful people')
+          
     block content
