--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -5,7 +5,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block header
-      a(href='')
+      a(href='/')
         img(src='/images/OP.jpg' alt='Beautiful people')
-          
+
     block content
