Updated through rs script

--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -6,6 +6,6 @@ html
   body
     block header
       a(href='/')
-        img(src='/images/OP.jpg' alt='Beautiful people')
+        img.header(src='/images/OP.jpg' alt='Beautiful people')
 
     block content
