--- a/src/views/thread.pug
+++ b/src/views/thread.pug
@@ -14,6 +14,10 @@ block content
         p.text= comment.paragraph
   br
 
+  p= page + 1
+
+  br
+
   h3 Tjáðu þig um málið hér.
   -id = '/threadid=' + thread.id
   form(method='post' action=id)
