--- a/src/views/thread.pug
+++ b/src/views/thread.pug
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-  h1.title= thread.name
+  h1.title= thread.title
+  h3.OPname= thread.name
   div.OP
     p.OPtext= thread.paragraph
 
