Updated through rs script

--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -7,5 +7,6 @@ html
     block header
       a(href='/')
         img.header(src='/images/OP.jpg' alt='Beautiful people')
+      h1.pageheader Forum
 
     block content
