--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -6,6 +6,17 @@ body {
   width: 100%;
 }
 
+h1.pageheader {
+  text-align: center;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  padding: 100px 0 0 0;
+  display: block;
+  font-weight: bold;
+}
+
 button {
   padding: 0px;
 }
