Updated through rs script

--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -4,8 +4,8 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block header
+    header
       a(href='/')
         h1.pageheader Forum
-
-    block content
+    main
+      block content
