--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -6,7 +6,7 @@ body {
   width: 100%;
   height: 300px;
   margin-bottom: 2em;
-  background: transparent url(/images/OP.jpg) no-repeat fixed 50% 50%;
+  background: transparent url(OP.jpg) no-repeat fixed 50% 50%;
   background-size: cover;
 }
 
