--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -2,11 +2,11 @@ body {
   margin: 50px;
 }
 
-.header {
+header {
   width: 100%;
   height: 300px;
   margin-bottom: 2em;
-  background: transparent url(OP.jpg) no-repeat fixed 50% 50%;
+  background: transparent url(/images/OP.jpg) no-repeat fixed 50% 50%;
   background-size: cover;
 }
 
