--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1,12 +1,18 @@
+html {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   margin: 0;
+  padding-top: 0;
 }
 
 header {
   width: 100%;
   height: 300px;
   margin-bottom: 2em;
-  background: transparent url(/images/OP.jpg) no-repeat fixed 50% 50%;
+  background: transparent url(/images/OP.jpg) no-repeat fixed 65% 50%;
   background-size: cover;
 }
 
