--- a/src/views/thread.pug
+++ b/src/views/thread.pug
@@ -22,7 +22,7 @@ block content
   br
 
   h3 Tjáðu þig um málið hér.
-  -id = '/threadid=' + thread.id
+  -id = '/threadid=' + JSON.stringify(thread.id)
   -id = id + '&page=' + page
   form(method='post' action=id)
     div
