--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -12,7 +12,7 @@ header {
   width: 100%;
   height: 300px;
   margin-bottom: 2em;
-  background: transparent url(/images/OP.jpg) no-repeat fixed 65% 300%;
+  background: transparent url(/images/OP.jpg) no-repeat fixed 65% 150%;
   background-size: cover;
 }
 
@@ -36,7 +36,13 @@ h1.pageheader {
 
 a{
   text-decoration: none;
-  text-decoration-color:
+  color: black;
+}
+
+a:hover {
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
 }
 
 button {
