--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -12,7 +12,8 @@ header {
   width: 100%;
   height: 300px;
   margin-bottom: 2em;
-  background: transparent url(/images/background.png) no-repeat fixed 65% 150%;
+  background: transparent url(/images/background.png) fixed 65% 150%;
+  background-repeat: repeat-x;
   background-size: cover;
 }
 
