--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -15,6 +15,7 @@ block content
       tr
         th User
         th Title
+        th Comments
         th Date
     tbody
       each thread in threads
@@ -23,4 +24,5 @@ block content
           td= thread.name
           td
             a(href=id)= thread.title
+          td numComments
           td= thread.date
