--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -6,19 +6,22 @@ html {
 body {
   margin: 0;
   padding-top: 0;
+  height: 100%;
 }
 
 header {
   width: 100%;
   height: 300px;
-  margin-bottom: 2em;
   background: transparent url(/images/background.png) fixed 65% 150%;
   background-repeat: repeat-x;
   background-size: cover;
 }
 
 main {
-  margin: 50px;
+  padding: 50px;
+  background: -webkit-linear-gradient(rgba(251,238,152,1) 0%, rgba(227, 227, 227, 1) 20%);
+  background: -o-linear-gradient(rgba(251,238,152,1) 0%, rgba(227, 227, 227, 1) 20%);
+  background: linear-gradient(rgba(251,238,152,1) 0%, rgba(227, 227, 227, 1) 20%);
 }
 
 h1.pageheader {
