--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1,12 +1,7 @@
-html {
+html, body {
   padding: 0;
   margin: 0;
-}
-
-body {
-  margin: 0;
-  padding-top: 0;
-  height: 100%;
+  min-height: 100%;
 }
 
 header {
