--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -14,9 +14,9 @@ header {
 
 main {
   padding: 50px;
-  background: -webkit-linear-gradient(rgba(251,238,152,1) 0%, rgba(227, 227, 227, 1) 20%);
-  background: -o-linear-gradient(rgba(251,238,152,1) 0%, rgba(227, 227, 227, 1) 20%);
-  background: linear-gradient(rgba(251,238,152,1) 0%, rgba(227, 227, 227, 1) 20%);
+  background: -webkit-linear-gradient(rgba(251,238,152,1) 0%, rgb(242, 179, 107) 20%);
+  background: -o-linear-gradient(rgba(251,238,152,1) 0%, rgb(242, 179, 107) 20%);
+  background: linear-gradient(rgba(251,238,152,1) 0%, rgb(242, 179, 107) 20%);
 }
 
 h1.pageheader {
