--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -19,9 +19,10 @@ header {
 
 main {
   padding: 50px;
-  background: -webkit-linear-gradient(rgba(251,238,152,1) 0%, rgba(254, 247, 206,1) 70%);
-  background: -o-linear-gradient(rgba(251,238,152,1) 0%, rgba(254, 247, 206,1) 70%);
-  background: linear-gradient(rgba(251,238,152,1) 0%, rgba(254, 247, 206,1) 70%);
+  min-height: 100%;
+  background: -webkit-linear-gradient(rgba(251,238,152,1) 0%, rgba(254, 247, 206,1) 70%, rgb(255, 255, 255) 99%);
+  background: -o-linear-gradient(rgba(251,238,152,1) 0%, rgba(254, 247, 206,1) 70%, rgb(255, 255, 255) 99%);
+  background: linear-gradient(rgba(251,238,152,1) 0%, rgba(254, 247, 206,1) 70%, rgb(255, 255, 255) 99%);
 }
 
 h1.pageheader {
