--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -7,6 +7,9 @@ html {
 }
 body {
   min-height: 100%;
+  background: -webkit-linear-gradient(rgba(251,238,152,1) 300px, rgba(254, 247, 206,1) 50%);
+  background: -o-linear-gradient(rgba(251,238,152,1) 300px, rgba(254, 247, 206,1) 50%);
+  background: linear-gradient(rgba(251,238,152,1) 300px, rgba(254, 247, 206,1) 50%);
 }
 
 header {
@@ -20,9 +23,6 @@ header {
 main {
   padding: 50px;
   min-height: 100%;
-  background: -webkit-linear-gradient(rgba(251,238,152,1) 0%, rgba(254, 247, 206,1) 50%, rgba(254, 247, 206,1) 90%, rgb(255, 255, 255) 100%);
-  background: -o-linear-gradient(rgba(251,238,152,1) 0%, rgba(254, 247, 206,1) 50%, rgba(254, 247, 206,1) 90%, rgb(255, 255, 255) 100%);
-  background: linear-gradient(rgba(251,238,152,1) 0%, rgba(254, 247, 206,1) 50%, rgba(254, 247, 206,1) 90%, rgb(255, 255, 255) 100%);
 }
 
 h1.pageheader {
