--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -10,6 +10,8 @@ body {
   background: -webkit-linear-gradient(rgba(251,238,152,1) 300px, rgba(254, 247, 206,1) 70%);
   background: -o-linear-gradient(rgba(251,238,152,1) 300px, rgba(254, 247, 206,1) 70%);
   background: linear-gradient(rgba(251,238,152,1) 300px, rgba(254, 247, 206,1) 70%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 header {
