--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -7,6 +7,7 @@ html {
 }
 body {
   min-height: 100%;
+  background-color: rgba(254, 247, 206,1);
   background: -webkit-linear-gradient(rgba(251,238,152,1) 300px, rgba(254, 247, 206,1) 70%);
   background: -o-linear-gradient(rgba(251,238,152,1) 300px, rgba(254, 247, 206,1) 70%);
   background: linear-gradient(rgba(251,238,152,1) 300px, rgba(254, 247, 206,1) 70%);
