--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -7,9 +7,9 @@ html {
 }
 body {
   min-height: 100%;
-  background: -webkit-linear-gradient(rgba(251,238,152,1) 320px, rgba(254, 247, 206,1) 80%);
-  background: -o-linear-gradient(rgba(251,238,152,1) 320px, rgba(254, 247, 206,1) 80%);
-  background: linear-gradient(rgba(251,238,152,1) 320px, rgba(254, 247, 206,1) 80%);
+  background: -webkit-linear-gradient(rgba(251,238,152,1) 320px, rgba(254, 247, 206,1) 1000px);
+  background: -o-linear-gradient(rgba(251,238,152,1) 320px, rgba(254, 247, 206,1) 1000px);
+  background: linear-gradient(rgba(251,238,152,1) 320px, rgba(254, 247, 206,1) 1000px);
   background-color: rgba(254, 247, 206,1);
   background-repeat: no-repeat;
 }
