--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -8,9 +8,9 @@ html {
 body {
   min-height: 100%;
   /*background-color: rgba(254, 247, 206,1);*/
-  background: -webkit-linear-gradient(rgba(251,238,152,1) 320px, rgba(254, 247, 206,1) 700px);
-  background: -o-linear-gradient(rgba(251,238,152,1) 320px, rgba(254, 247, 206,1) 700px);
-  background: linear-gradient(rgba(251,238,152,1) 320px, rgba(254, 247, 206,1) 700px);
+  background: -webkit-linear-gradient(rgba(251,238,152,1) 320px, rgba(254, 247, 206,1) 700px, rgba(254, 247, 206,1) 100%);
+  background: -o-linear-gradient(rgba(251,238,152,1) 320px, rgba(254, 247, 206,1) 700px, rgba(254, 247, 206,1) 100%);
+  background: linear-gradient(rgba(251,238,152,1) 320px, rgba(254, 247, 206,1) 700px, rgba(254, 247, 206,1) 100%);
   background-repeat: no-repeat;
 }
 
