--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -26,6 +26,8 @@ header {
 main {
   padding: 50px;
   min-height: 100%;
+  max-width: 1300px;
+  float: center;
 }
 
 h1.pageheader {
@@ -50,7 +52,7 @@ a{
 a:hover {
   -webkit-transform: scale(1.3);
   -ms-transform: scale(1.3);
-        transform: scale(1.3);
+  transform: scale(1.3);
 }
 
 .newThread {
@@ -60,10 +62,6 @@ a:hover {
 
 button {
   padding: 0px;
-}
-
-table {
-  float: center;
 }
 
 td, tr {
