Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -4,9 +4,12 @@ block content
   h1= title
   br
 
-  div.newThread
-    a(href='/newThread')
-      button(type='submit' name='writeThread') New Thread
+  nav
+    a(href='/schemes') Schemes
+    a(href='/party') Party
+    a(href='/tech') Tech
+    a(href='/videogames') Videgames
+    a(href='/newThread') New Thread
   br
 
   hr
