Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -5,10 +5,10 @@ block content
   br
 
   nav
-    a(href='/schemes') Schemes
-    a(href='/party') Party
-    a(href='/tech') Tech
-    a(href='/videogames') Videgames
+    a(href='/cat=Schemes') Schemes
+    a(href='/cat=Party') Party
+    a(href='/cat=Tech') Tech
+    a(href='/cat=Videogames') Videgames
     a(href='/newThread') New Thread
   br
 
