Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -9,7 +9,7 @@ block content
     a(href='/cat=Party') Party
     a(href='/cat=Tech') Tech
     a(href='/cat=Videogames') Videgames
-    a(href='/newThread') New Thread
+    a.newThread(href='/newThread') New Thread
   br
 
   hr
