Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -5,11 +5,16 @@ block content
   br
 
   nav
-    a(href='/cat=Schemes') Schemes
-    a(href='/cat=Party') Party
-    a(href='/cat=Tech') Tech
-    a(href='/cat=Videogames') Videgames
-    a.newThread(href='/newThread') New Thread
+    a(href='/cat=Schemes')
+      b Schemes
+    a(href='/cat=Party')
+      b Party
+    a(href='/cat=Tech')
+      b Tech
+    a(href='/cat=Videogames') 
+      b Videgames
+    a.newThread(href='/newThread')
+      b New Thread
   br
 
   hr
