--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -60,7 +60,9 @@ button {
   padding: 0px;
 }
 
-.indexTable {
+table.index {
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
 }
 
