Updated through rs script

--- a/src/views/thread.pug
+++ b/src/views/thread.pug
@@ -34,7 +34,7 @@ block content
 
   -id = id + page
 
-  h3 Tjáðu þig um málið hér.
+  h3 Leave a comment below
   form(method='post' action=id)
     div
       input(
