Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -14,7 +14,7 @@ block content
     form(method='get' action='/cat=Videogames')
       button(type='submit') Videogames
     form(method='get' action='/newThread')
-      button(type='submit') New Thread
+      button.newThread(type='submit') New Thread
 
   br
 
