--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -48,7 +48,7 @@ main {
 }
 
 .menuBtn {
-  background: #811717;
+  background: rgb(244, 139, 194);
   text-shadow: 1px 1px 3px #000000;
   font-family: Georgia;
   color: #ffffff;
@@ -59,7 +59,7 @@ main {
 }
 
 .menuBtn:hover {
-  background: #aa2121;
+  background: rgb(174, 222, 241);
   text-decoration: none;
 }
 
@@ -84,4 +84,14 @@ table.index {
 
 td, tr {
   padding: 15px;
+}
+
+ul {
+  list-style-type: none;
+  display: inline;
+}
+
+li {
+  padding: 3px;
+  background: rgb(244, 139, 194);
 }
