Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -6,15 +6,15 @@ block content
 
   div.menu
     form(method='get' action='/cat=Schemes')
-      button(type='submit') Schemes
+      button.menuBtn(type='submit') Schemes
     form(method='get' action='/cat=Party')
-      button(type='submit') Party
+      button.menuBtn(type='submit') Party
     form(method='get' action='/cat=Tech')
-      button(type='submit') Tech
+      button.menuBtn(type='submit') Tech
     form(method='get' action='/cat=Videogames')
-      button(type='submit') Videogames
+      button.menuBtn(type='submit') Videogames
     form(method='get' action='/newThread')
-      button.newThread(type='submit') New Thread
+      button.menuBtn.newThread(type='submit') New Thread
 
   br
 
