--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -87,11 +87,26 @@ td, tr {
 }
 
 ul {
-  list-style-type: none;
-  display: inline;
+  /*list-style-type: none;
+  display: inline;*/
 }
 
 li {
+  list-style-type: none;
+  display: inline;
+  padding: 0;
+  margin: 0;
+}
+
+li a {
+  margin: 0;
   padding: 3px;
   background: rgb(244, 139, 194);
+}
+
+li p {
+  margin: 0;
+  padding: 3px;
+  background: rgb(190, 190, 190);
+  display: inline;
 }
