--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -6,12 +6,28 @@ block content
 
   div.menu
     form(method='get' action='/cat=Schemes')
-      button.menuBtn(type='submit') Schemes
+      if title==Schemes
+        button.menuBtn.currentSub(type='submit') Schemes
+      else
+
+        button.menuBtn(type='submit') Schemes
     form(method='get' action='/cat=Party')
+      if title==Party
+        button.menuBtn.currentSub(type='submit') Party
+      else
+
       button.menuBtn(type='submit') Party
     form(method='get' action='/cat=Tech')
+      if title==Tech
+        button.menuBtn.currentSub(type='submit') Tech
+      else
+
       button.menuBtn(type='submit') Tech
     form(method='get' action='/cat=Videogames')
+      if title==Videogames
+        button.menuBtn.currentSub(type='submit') Videogames
+      else
+
       button.menuBtn(type='submit') Videogames
     form(method='get' action='/newThread')
       button.menuBtn.newThread(type='submit') New Thread
