Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -29,6 +29,7 @@ block content
       else
 
       button.menuBtn(type='submit') Videogames
+  div.newThreadDiv
     form(method='get' action='/newThread')
       button.menuBtn.newThread(type='submit') New Thread
 
