--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -45,6 +45,7 @@ main {
 
 .menu {
   display: flex;
+  float:left;
 }
 
 .menuBtn {
@@ -56,7 +57,6 @@ main {
   width: 5em;
   height: 3.5em;
   text-decoration: none;
-  float: left;
 }
 
 .menuBtn:hover {
@@ -73,8 +73,11 @@ a{
   background: rgb(105, 199, 165)
 }
 
-.newThread {
+.newThreadDiv {
   float: right;
+}
+
+.newThread {
   background: rgb(244, 139, 194)
 }
 
