--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -5,30 +5,27 @@ block content
   br
 
   div.menu
-    form(method='get' action='/cat=Schemes')
-      if title == 'Schemes'
-        button.menuBtn.currentSub(type='submit') Schemes
-      else
-
-        button.menuBtn(type='submit') Schemes
-    form(method='get' action='/cat=Party')
-      if title == 'Party'
-        button.menuBtn.currentSub(type='submit') Party
-      else
-
+    if title == 'Schemes'
+      button.currentSub(disabled) Schemes
+    else
+      form(method='get' action='/cat=Schemes')
+      button.menuBtn(type='submit') Schemes
+    if title == 'Party'
+      button.currentSub(disabled) Party
+    else    
+      form(method='get' action='/cat=Party')
       button.menuBtn(type='submit') Party
-    form(method='get' action='/cat=Tech')
-      if title == 'Tech'
-        button.menuBtn.currentSub(type='submit') Tech
-      else
-
+    if title == 'Tech'
+      button.currentSub(disabled) Tech
+    else
+      form(method='get' action='/cat=Tech')
       button.menuBtn(type='submit') Tech
-    form(method='get' action='/cat=Videogames')
-      if title == 'Videogames'
-        button.menuBtn.currentSub(type='submit') Videogames
-      else
-
+    if title == 'Videogames'
+      button.currentSub(disabled) Videgames
+    else
+      form(method='get' action='/cat=Videogames')
       button.menuBtn(type='submit') Videogames
+
   div.newThreadDiv
     form(method='get' action='/newThread')
       button.menuBtn.newThread(type='submit') New Thread
