Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -24,11 +24,11 @@ block content
       form(method='get' action='/cat=Tech')
       button.menuBtn(type='submit') Tech
     if title == 'Videogames'
-      button.currentSub(disabled) Videgames
+      button.currentSub(disabled) Video Games
     else
 
       form(method='get' action='/cat=Videogames')
-      button.menuBtn(type='submit') Videogames
+      button.menuBtn(type='submit') Video Games
 
   div.newThreadDiv
     form(method='get' action='/newThread')
