--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -85,10 +85,7 @@ button {
   padding: 0px;
 }
 
-table.index {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
+.table {
   float: none;
 }
 
