--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -35,20 +35,21 @@ block content
 
   br
 
-  hr
-  table.index
-    thead
-      tr
-        th User
-        th Title
-        th Comments
-        th Date
-    tbody
-      each thread in threads
-        -id = '/threadid=' + thread.id + '&page=0'
+  .table
+    hr
+    table
+      thead
         tr
-          td= thread.name
-          td
-            a(href=id)= thread.title
-          td numComments
-          td= thread.date
+          th User
+          th Title
+          th Comments
+          th Date
+      tbody
+        each thread in threads
+          -id = '/threadid=' + thread.id + '&page=0'
+          tr
+            td= thread.name
+            td
+              a(href=id)= thread.title
+            td numComments
+            td= thread.date
