Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -23,7 +23,7 @@ block content
       else
 
         button.menuBtn(type='submit') Tech
-    form(method='get' action='/cat=Videogames')
+    a(href='/cat=Videogames')
       if title == 'Videogames'
         button.menuBtn.currentSub(type='submit') Video games
       else
