Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -51,5 +51,5 @@ block content
             td= thread.name
             td
               a(href=id)= thread.title
-            td thread.comnum
+            td= thread.comnum
             td= thread.mdate
