--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -33,10 +33,10 @@ block content
     a(href='/newThread')
       button.menuBtn.newThread(type='submit') New Thread
 
-  br
+  hr.centerLine
 
   .table
-    hr
+    br
     table
       thead
         tr
