--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -57,6 +57,10 @@ main {
   width: 5em;
   height: 3.5em;
   text-decoration: none;
+  border: none;
+  -webkit-border-radius: 25;
+  -moz-border-radius: 25;
+  border-radius: 25px;
 }
 
 .menuBtn:hover {
@@ -84,9 +88,6 @@ a{
 
 .newThread {
   background: rgb(244, 139, 194);
-  -webkit-border-radius: 17;
-  -moz-border-radius: 17;
-  border-radius: 17px;
 }
 
 button {
