--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -58,6 +58,10 @@ main {
   height: 3.5em;
   text-decoration: none;
   border: none;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: background-color;
+  transition-property: background-color;
 }
 
 .menuBtn:hover {
