--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -60,8 +60,8 @@ main {
   border: none;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
-  -webkit-transition-property: background-color;
-  transition-property: background-color;
+  -webkit-transition-property: background-color, border-radius;
+  transition-property: background-color, border-radius;
 }
 
 .menuBtn:hover {
