Updated through rs script

--- a/src/views/newthread.pug
+++ b/src/views/newthread.pug
@@ -31,8 +31,8 @@ block content
         required title='must be 3-10000 characters'
       )
     div
-      p Category:
-      select(name='sub')
+      p.select Category:
+      select.select(name='sub')
         option(value='Schemes') Schemes
         option(value='Party') Party
         option(value='Tech') Tech
