Updated through rs script

--- a/src/views/newthread.pug
+++ b/src/views/newthread.pug
@@ -34,7 +34,7 @@ block content
       p.select Category:
       select.select(name='sub')
         option(value='Schemes') Schemes
-        option(value='Party') Party
+        option(value='Party' selected='selected') Party
         option(value='Tech') Tech
         option(value='Videogames') Videogames
     div
