--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -27,6 +27,7 @@ block content
 
         button.menuBtn(type='submit') Video games
   div.newThreadDiv
+    -blah = '/newThread&'+title
     a(href='/newThread')
       button.menuBtn.newThread(type='submit') New Thread
 
