Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -28,7 +28,7 @@ block content
         button.menuBtn(type='submit') Video games
   div.newThreadDiv
     -blah = '/newThread&'+title
-    a(href='/newThread')
+    a(href=blah)
       button.menuBtn.newThread(type='submit') New Thread
 
   .table
