Updated through rs script

--- a/src/views/newthread.pug
+++ b/src/views/newthread.pug
@@ -37,9 +37,9 @@ block content
         -b=''
         -c='selected'
         -d=''
-        option(value='Schemes' selected=a) Schemes
-        option(value='Party' selected=b) Party
-        option(value='Tech' selected=c) Tech
-        option(value='Videogames' selected=d) Videogames
+        option(value='Schemes' a) Schemes
+        option(value='Party' b) Party
+        option(value='Tech' c) Tech
+        option(value='Videogames' d) Videogames
     div
       button(type='submit') Express yourself
